--- a/MessagingTutorial/build.gradle
+++ b/MessagingTutorial/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/Parse-1.5.1.jar')
 }
