--- a/MessagingTutorial/build.gradle
+++ b/MessagingTutorial/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:19.+'
     compile 'com.android.support:appcompat-v7:19.+'
+    compile files('libs/sinch-android-rtc-3.2.4.jar')
 }
