--- a/MessagingTutorial/src/main/AndroidManifest.xml
+++ b/MessagingTutorial/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:label="@string/title_activity_list_users" >
         </activity>
         <service android:name=".MessageService"></service>
+        <activity android:name=".MessagingActivity"></activity>
     </application>
 
 </manifest>
