Don't allow rotation of messaging conversation

--- a/MessagingTutorial/src/main/AndroidManifest.xml
+++ b/MessagingTutorial/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".ListUsersActivity"></activity>
         <service android:name=".MessageService"></service>
-        <activity android:name=".MessagingActivity"></activity>
+        <activity android:name=".MessagingActivity"
+                  android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
