--- a/MessagingTutorial/build.gradle
+++ b/MessagingTutorial/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v4:19.+'
     compile 'com.android.support:appcompat-v7:19.+'
     compile files('libs/sinch-android-rtc-3.2.4.jar')
+    compile files('libs/sinch-android-rtc-3.2.6.jar')
 }
