--- a/MessagingTutorial/src/main/AndroidManifest.xml
+++ b/MessagingTutorial/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
+        android:theme="@android:style/Theme.Light.NoTitleBar"
+        android:name=".MyApplication">
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait" >
