Don't let ListUsersActivity rotate

--- a/MessagingTutorial/src/main/AndroidManifest.xml
+++ b/MessagingTutorial/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListUsersActivity"></activity>
+        <activity 
+            android:name=".ListUsersActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <service android:name=".MessageService"></service>
         <activity android:name=".MessagingActivity"
                   android:screenOrientation="portrait">
